--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,3 @@
+Content-Type: text/plain
+
 curl -L --resolve raw.githubusercontent.com:443:185.199.108.133 https://raw.githubusercontent.com/rosakodu/skip/main/skip.sh | bash
